--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+
+:root {
+  --clr__DarkBlue: hsl(209, 23%, 22%);
+  --clr__VeryDarkBlue__bg--dark: hsl(207, 26%, 17%);
+  --clr__VeryDarkBlue__tx: hsl(200, 15%, 8%);
+  --clr__DarkGray: hsl(0, 0%, 52%);
+  --clr__VeryLightGray: hsl(0, 0%, 98%);
+  --clr__White: hsl(0, 0%, 100%);
+  --clr__grayishWhite: hsla(0, 0%, 100%, 0.596);
+  --clr__VeryDarkBlue__bg--light: hsl(0, 0%, 98%);
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
@@ -20,7 +31,8 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: var(--clr__White);
+    background: var(--clr__VeryDarkBlue__bg--dark);
   }
 }
+
