Filtering countries fixed

--- a/components/Countries/Countries.module.css
+++ b/components/Countries/Countries.module.css
@@ -33,6 +33,10 @@
   }
 }
 
+.noCountry {
+  color: var(--clr__White);
+}
+
 @media (max-width: 600px) {
   .cardsContainer {
     justify-content: center;
