--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .container {
   height: 340px;
-  background-color: var(--clr__DarkBlue);
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
+  text-decoration: none;
 }
 
 .container:hover {
@@ -11,22 +11,24 @@
 }
 
 .container span {
-  color: var(--clr__grayishWhite);
+  color: var(--on-text-card-span);
   margin-left: 0.3rem;
+  font-weight: 300;
 }
 
 .info h1,
 .info p {
   margin: 0;
-  color: var(--clr__White);
+  color: var(--on-text-card-h1-p);
 }
 
 .info h1 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin: 0.9rem 1rem;
-  font-weight: 600;
+  font-weight: 800;
 }
 
 .info p {
+  font-weight: 600;
   margin: 0 0 0.2rem 1rem;
 }
