--- a/components/Details/Details.module.css
+++ b/components/Details/Details.module.css
@@ -6,13 +6,13 @@
 .detailsContainer {
   padding: 1rem;
   height: 100vh;
-  color: #fff;
+  color: var(--on-text);
   display: flex;
   gap: 9rem;
 }
 
 .detailsContainer span {
-  color: var(--clr__grayishWhite);
+  color: var(--on-text-card-span);
 }
 
 .backBtn {
@@ -21,12 +21,12 @@
 }
 
 .backBtn a {
-  background: url(../../public/icons/back-arrow.svg) no-repeat left 0.8rem center, var(--clr__DarkBlue);
+  background: var(--on-backBtn-bg);
   background-size: 1rem;
   box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.5);
   padding: 0.3rem 2.5rem;
   border-radius: 5px;
-  color: #fff;
+  color: var(--on-text);
   font-size: 1rem;
 }
 
@@ -67,7 +67,6 @@
 
 .bordersValues {
   margin-left: 0.5rem;
-  background-color: var(--clr__DarkBlue);
   padding: 0.2rem 2.4rem;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   font-size: 0.8rem;
@@ -76,4 +75,15 @@
 .bordersValues:hover {
   box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.5);
   transition: all 0.2s ease-in-out;
+}
+
+.left p,
+.right p,
+.borders p {
+  font-weight: 800;
+}
+
+.left p span,
+.right p span {
+  font-weight: 300;
 }
