--- a/components/Select/Select.module.css
+++ b/components/Select/Select.module.css
@@ -8,15 +8,25 @@
 .select {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 0.8rem;
-  background: var(--clr__DarkBlue);
-  color: var(--clr__White);
+  color: var(--on-text);
+  font-weight: 800;
   cursor: pointer;
 }
 
+.chevron {
+  background: var(--on-chevronBtn-bg);
+  width: 50px;
+  height: 20px;
+  transition: all 0.2s ease;
+}
+
 .selectBody {
-  background: var(--clr__DarkBlue);
-  color: var(--clr__White);
+  background: var(--on-background);
+  color: var(--on-text);
+  font-weight: 600;
+  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.5);
   padding: 0 1rem;
   margin-top: 10px;
   cursor: pointer;
@@ -24,4 +34,8 @@
   z-index: 10;
   width: 100%;
   transition: all 0.2s ease-in-out;
+}
+.selectBody p:hover {
+  transition: all 0.1s ease;
+  color: var(--on-hover);
 }
