--- a/components/Countries/Countries.module.css
+++ b/components/Countries/Countries.module.css
@@ -1,10 +1,11 @@
 .cardsContainer {
-  padding-top: 2.5rem;
+  padding-top: 0.8rem;
   max-width: 1400px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  gap: 3rem;
+  row-gap: 3rem;
+  column-gap: 1rem;
   justify-items: center;
   animation: 0.7s cards ease-in-out;
 }
