--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -1,10 +1,23 @@
+.inputContainer {
+  margin-left: 1.8rem;
+  width: 36%;
+}
+
 .inputContainer input {
-  padding: 1rem 4.5rem;
-  width: 30rem;
+  padding: 1.1rem 4.5rem;
+  width: 100%;
   border-radius: 5px;
   background: var(--on-icon-search-bg);
   border: none;
-  font-size: 1.2rem;
+  font-size: clamp(0.5rem, 1vw, 1.2rem);
   color: var(--on-text);
   box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.5);
+}
+
+@media (max-width: 850px) {
+  .inputContainer {
+    margin-left: unset;
+    margin-bottom: 2rem;
+    width: 100%;
+  }
 }
