--- a/components/Select/Select.module.css
+++ b/components/Select/Select.module.css
@@ -1,8 +1,13 @@
 .container {
-  width: 15rem;
+  width: 12rem;
   user-select: none;
   position: relative;
   box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 1rem;
+  border-radius: 5px;
 }
 
 .select {
@@ -12,12 +17,14 @@
   padding: 0 0.8rem;
   color: var(--on-text);
   font-weight: 800;
+  font-size: 0.8rem;
+  width: 100%;
   cursor: pointer;
 }
 
 .chevron {
   background: var(--on-chevronBtn-bg);
-  width: 50px;
+  width: 35px;
   height: 20px;
   transition: all 0.2s ease;
 }
@@ -28,11 +35,12 @@
   font-weight: 600;
   box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.5);
   padding: 0 1rem;
-  margin-top: 10px;
+  margin-top: 430px;
   cursor: pointer;
   position: absolute;
   z-index: 10;
-  width: 100%;
+  width: 12rem;
+  border-radius: 5px;
   transition: all 0.2s ease-in-out;
 }
 .selectBody p:hover {
